cmake_minimum_required(VERSION 2.6)

project(libuv)

include_directories(include src)

set(common
./src/fs-poll.c
./src/inet.c
./src/threadpool.c
./src/uv-common.c
./src/version.c
)
if(MSVC)
add_library(libuv
${common}
./src/win/async.c
./src/win/core.c
./src/win/dl.c
./src/win/error.c
./src/win/fs-event.c
./src/win/fs.c
./src/win/getaddrinfo.c
./src/win/getnameinfo.c
./src/win/handle.c
./src/win/loop-watcher.c
./src/win/pipe.c
./src/win/poll.c
./src/win/process-stdio.c
./src/win/process.c
./src/win/req.c
./src/win/signal.c
./src/win/stream.c
./src/win/tcp.c
./src/win/thread.c
./src/win/timer.c
./src/win/tty.c
./src/win/udp.c
./src/win/util.c
./src/win/winapi.c
./src/win/winsock.c
)
target_link_libraries(libuv ws2_32 advapi32 iphlpapi psapi shell32 userenv)
else()
add_library(libuv
${common}
#./src/unix/aix.c
#./src/unix/android-ifaddrs.c
./src/unix/async.c
./src/unix/core.c
#./src/unix/darwin-proctitle.c
#./src/unix/darwin.c
./src/unix/dl.c
#./src/unix/freebsd.c
./src/unix/fs.c
#./src/unix/fsevents.c
./src/unix/getaddrinfo.c
./src/unix/getnameinfo.c
#./src/unix/kqueue.c
./src/unix/linux-core.c
./src/unix/linux-inotify.c
./src/unix/linux-syscalls.c
./src/unix/loop-watcher.c
./src/unix/loop.c
#./src/unix/netbsd.c
#./src/unix/openbsd.c
./src/unix/pipe.c
./src/unix/poll.c
./src/unix/process.c
./src/unix/proctitle.c
#./src/unix/pthread-fixes.c
./src/unix/signal.c
./src/unix/stream.c
#./src/unix/sunos.c
./src/unix/tcp.c
./src/unix/thread.c
./src/unix/timer.c
./src/unix/tty.c
./src/unix/udp.c
)
target_link_libraries(libuv pthread)
endif()
